--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -24,7 +24,7 @@ Prueba_Nayeli As screen:
     "Gallery4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
-        Height: =455
+        Height: =481
         Items: |+
             =Filter(
                 T_OKR_APP_GCI_003,
@@ -48,10 +48,10 @@ Prueba_Nayeli As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
-        TemplateSize: =90
+        TemplateSize: =82
         Width: =1245
         X: =59
-        Y: =264
+        Y: =237
         ZIndex: =4
 
         NextArrow1 As icon.ChevronRight:
@@ -101,7 +101,7 @@ Prueba_Nayeli As screen:
             DisplayMode: =DisplayMode.Edit
             Height: =56
             Text: =ThisItem.nombreKR
-            Width: =220
+            Width: =207
             X: =110
             Y: =14
             ZIndex: =8
@@ -112,7 +112,7 @@ Prueba_Nayeli As screen:
             Text: |
                 =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
             Width: =141
-            X: =330
+            X: =343
             Y: =14
             ZIndex: =9
 
@@ -136,8 +136,8 @@ Prueba_Nayeli As screen:
             Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =140
-            X: =471
-            Y: =31
+            X: =495
+            Y: =30
             ZIndex: =10
 
         Gallery6_1 As gallery.galleryHorizontal:
@@ -149,7 +149,7 @@ Prueba_Nayeli As screen:
             TemplatePadding: =0
             TemplateSize: =61
             Width: =69
-            X: =644
+            X: =677
             Y: =20
             ZIndex: =11
 
@@ -319,20 +319,14 @@ Prueba_Nayeli As screen:
         ZIndex: =10
 
     "TextInputCanvas2_1 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(180, 214, 250, 1)
         Height: =33
-        Value: ="Descrpción del KR"
-        Width: =144
-        X: =169
+        Value: ="Código"
+        Width: =207
+        X: =168
         Y: =194
         ZIndex: =11
-
-    "TextInputCanvas2_2 As 'Entrada de texto'":
-        DisplayMode: =DisplayMode.Edit
-        Height: =33
-        Value: ="Responsable"
-        Width: =144
-        X: =369
-        Y: =194
-        ZIndex: =12
 
