--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -134,7 +134,7 @@ Screens:
                   Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
                   Weight: ='TextCanvas.Weight'.Semibold
                   Width: =140
-                  X: =495
+                  X: =510
                   Y: =30
             - Gallery6_1:
                 Control: Gallery@2.15.0
@@ -145,8 +145,8 @@ Screens:
                   TemplatePadding: =0
                   TemplateSize: =61
                   Width: =69
-                  X: =677
-                  Y: =20
+                  X: =714
+                  Y: =19
                 Children:
                   - Container2_1:
                       Control: GroupContainer@1.3.0
@@ -304,7 +304,40 @@ Screens:
             BorderRadius: =5
             Fill: =RGBA(180, 214, 250, 1)
             Height: =33
-            Value: ="Código"
+            Value: ="Descripción Kr"
             Width: =207
             X: =168
+            Y: =194
+      - TextInputCanvas2_2:
+          Control: TextInput@0.0.51
+          Properties:
+            Align: ='TextInputCanvas.Align'.Center
+            BorderRadius: =5
+            Fill: =RGBA(180, 214, 250, 1)
+            Height: =33
+            Value: ="Líder"
+            Width: =157
+            X: =389
+            Y: =194
+      - TextInputCanvas2_3:
+          Control: TextInput@0.0.51
+          Properties:
+            Align: ='TextInputCanvas.Align'.Center
+            BorderRadius: =5
+            Fill: =RGBA(180, 214, 250, 1)
+            Height: =33
+            Value: ="Estado KR"
+            Width: =145
+            X: =566
+            Y: =194
+      - TextInputCanvas2_4:
+          Control: TextInput@0.0.51
+          Properties:
+            Align: ='TextInputCanvas.Align'.Center
+            BorderRadius: =5
+            Fill: =RGBA(180, 214, 250, 1)
+            Height: =33
+            Value: ="Responsable"
+            Width: =135
+            X: =731
             Y: =194
