--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -136,7 +136,7 @@ Prueba_Nayeli As screen:
             Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =140
-            X: =495
+            X: =510
             Y: =30
             ZIndex: =10
 
@@ -149,8 +149,8 @@ Prueba_Nayeli As screen:
             TemplatePadding: =0
             TemplateSize: =61
             Width: =69
-            X: =677
-            Y: =20
+            X: =714
+            Y: =19
             ZIndex: =11
 
             Container2_1 As groupContainer.manualLayoutContainer:
@@ -324,9 +324,45 @@ Prueba_Nayeli As screen:
         DisplayMode: =DisplayMode.Edit
         Fill: =RGBA(180, 214, 250, 1)
         Height: =33
-        Value: ="Código"
+        Value: ="Descripción Kr"
         Width: =207
         X: =168
         Y: =194
         ZIndex: =11
+
+    "TextInputCanvas2_2 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(180, 214, 250, 1)
+        Height: =33
+        Value: ="Líder"
+        Width: =157
+        X: =389
+        Y: =194
+        ZIndex: =12
+
+    "TextInputCanvas2_3 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(180, 214, 250, 1)
+        Height: =33
+        Value: ="Estado KR"
+        Width: =145
+        X: =566
+        Y: =194
+        ZIndex: =13
+
+    "TextInputCanvas2_4 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(180, 214, 250, 1)
+        Height: =33
+        Value: ="Responsable"
+        Width: =135
+        X: =731
+        Y: =194
+        ZIndex: =14
 
