--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -136,49 +136,47 @@ Screens:
                   Width: =140
                   X: =510
                   Y: =30
-            - Gallery6_1:
+            - Gallery6_3:
                 Control: Gallery@2.15.0
                 Variant: Horizontal
                 Properties:
-                  Height: =50
-                  Items: =ThisItem.'Creado por'
+                  Height: =32
+                  Items: =ThisItem.responsables
                   TemplatePadding: =0
-                  TemplateSize: =61
-                  Width: =69
-                  X: =714
-                  Y: =19
+                  TemplateSize: =30
+                  Width: =115
+                  X: =718
+                  Y: =26
                 Children:
-                  - Container2_1:
+                  - Container2_3:
                       Control: GroupContainer@1.3.0
                       Variant: ManualLayout
                       Properties:
                         BorderColor: =RGBA(52, 152, 47, 1)
                         DropShadow: =DropShadow.None
                         Fill: =RGBA(62, 128, 149, 1)
-                        Height: =42
+                        Height: =Self.Width
                         RadiusBottomLeft: =30
                         RadiusBottomRight: =30
                         RadiusTopLeft: =30
                         RadiusTopRight: =30
-                        Width: =42
+                        Width: =30
                       Children:
-                        - TextCanvas6_1:
+                        - TextCanvas6_3:
                             Control: Text@0.0.47
                             Properties:
                               Align: ='TextCanvas.Align'.Center
                               Font: =Font.Arial
                               FontColor: =RGBA(255, 255, 255, 1)
                               Height: =30
+                              Size: =11
                               Text: =Left(First(Split(ThisItem.DisplayName, " ")).Value,1) & Left(Last(FirstN(Split(ThisItem.DisplayName, " "), CountRows(Split(ThisItem.DisplayName, " ")) - 1)).Value,1)
-                              VerticalAlign: ='TextCanvas.VerticalAlign'.Middle
                               Weight: ='TextCanvas.Weight'.Bold
                               Width: =30
-                              X: =5
-                              Y: =6
-                  - Image1_1:
+                  - Image1_3:
                       Control: Image@2.2.3
                       Properties:
-                        Height: =50
+                        Height: =Self.Width
                         Image: |
                           =IfError(
                               UsuariosdeOffice365.UserPhotoMetadata(ThisItem.Email).HasPhoto,
@@ -186,11 +184,12 @@ Screens:
                               UsuariosdeOffice365.UserPhotoV2(ThisItem.Email)
                           )
                         OnSelect: =Select(Parent)
-                        RadiusBottomLeft: =40
-                        RadiusBottomRight: =40
-                        RadiusTopLeft: =40
-                        RadiusTopRight: =40
-                        Width: =50
+                        RadiusBottomLeft: =30
+                        RadiusBottomRight: =30
+                        RadiusTopLeft: =30
+                        RadiusTopRight: =30
+                        Tooltip: =ThisItem.DisplayName
+                        Width: =30
       - filterLider_1:
           Control: ComboBox@0.0.48
           Properties:
