--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -48,27 +48,11 @@ Prueba_Nayeli As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
-        TemplateSize: =82
+        TemplateSize: =62
         Width: =1245
         X: =59
         Y: =237
         ZIndex: =4
-
-        NextArrow1 As icon.ChevronRight:
-            AccessibleLabel: =Self.Tooltip
-            Color: =RGBA(166, 166, 166, 1)
-            Height: =50
-            Icon: =Icon.ChevronRight
-            OnSelect: =Select(Parent)
-            PaddingBottom: =16
-            PaddingLeft: =16
-            PaddingRight: =16
-            PaddingTop: =16
-            Tooltip: ="Ver los detalles del elemento"
-            Width: =50
-            X: =Parent.TemplateWidth - Self.Width - 12
-            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =4
 
         Separator1 As rectangle:
             BorderColor: =App.Theme.Colors.Darker40
@@ -90,11 +74,11 @@ Prueba_Nayeli As screen:
 
         TextCanvas7 As Texto:
             DisplayMode: =DisplayMode.Edit
-            Height: =50
+            Height: =32
             Text: =ThisItem.codigoKR
             Width: =90
             X: =20
-            Y: =20
+            Y: =26
             ZIndex: =7
 
         TextCanvas7_1 As Texto:
@@ -102,6 +86,7 @@ Prueba_Nayeli As screen:
             Height: =56
             Text: =ThisItem.nombreKR
             Width: =207
+            Wrap: =false
             X: =110
             Y: =14
             ZIndex: =8
@@ -143,7 +128,7 @@ Prueba_Nayeli As screen:
         Gallery6_3 As gallery.galleryHorizontal:
             BorderColor: =App.Theme.Colors.Darker40
             DelayItemLoading: =true
-            Height: =32
+            Height: =44
             Items: =ThisItem.responsables
             LoadingSpinner: =LoadingSpinner.Data
             TemplatePadding: =0
@@ -156,12 +141,12 @@ Prueba_Nayeli As screen:
             Container2_3 As groupContainer.manualLayoutContainer:
                 BorderColor: =RGBA(52, 152, 47, 1)
                 Fill: =RGBA(62, 128, 149, 1)
-                Height: =Self.Width
+                Height: =35
                 RadiusBottomLeft: =30
                 RadiusBottomRight: =30
                 RadiusTopLeft: =30
                 RadiusTopRight: =30
-                Width: =30
+                Width: =35
                 ZIndex: =1
 
                 TextCanvas6_3 As Texto:
@@ -169,11 +154,11 @@ Prueba_Nayeli As screen:
                     DisplayMode: =DisplayMode.Edit
                     Font: =Font.Arial
                     FontColor: =RGBA(255, 255, 255, 1)
-                    Height: =30
+                    Height: =35
                     Size: =11
                     Text: =Left(First(Split(ThisItem.DisplayName, " ")).Value,1) & Left(Last(FirstN(Split(ThisItem.DisplayName, " "), CountRows(Split(ThisItem.DisplayName, " ")) - 1)).Value,1)
                     Weight: ='TextCanvas.Weight'.Bold
-                    Width: =30
+                    Width: =35
                     Wrap: =true
                     X: =0
                     Y: =0
@@ -183,7 +168,7 @@ Prueba_Nayeli As screen:
                 BorderColor: =App.Theme.Colors.Darker40
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
-                Height: =Self.Width
+                Height: =35
                 Image: |
                     =IfError(
                         UsuariosdeOffice365.UserPhotoMetadata(ThisItem.Email).HasPhoto,
@@ -196,7 +181,7 @@ Prueba_Nayeli As screen:
                 RadiusTopLeft: =30
                 RadiusTopRight: =30
                 Tooltip: =ThisItem.DisplayName
-                Width: =30
+                Width: =35
                 ZIndex: =2
 
     "filterLider_1 As 'Cuadro combinado'.pcfdataset":
