--- a/PowerApp/Other/Src/Prueba_Nayeli_1.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli_1.pa.yaml
@@ -228,20 +228,12 @@ Screens:
                   OnSelect: =Select(Parent)
                   Width: =Parent.TemplateWidth
                   Y: =Parent.TemplateHeight - Self.Height
-            - Rectangle5:
-                Control: Rectangle@2.3.0
-                Properties:
-                  Fill: =App.Theme.Colors.Darker30
-                  Height: =Parent.TemplateHeight - Separator4.Height
-                  OnSelect: =Select(Parent)
-                  Visible: =ThisItem.IsSelected
-                  Width: =4
             - HtmlText4:
                 Control: HtmlViewer@2.1.0
                 Properties:
                   Height: =88
                   HtmlText: |-
-                    =$"<div style='border-radius: 2px;padding: 35px;margin: 0px;background-color: #ffffff;border-bottom: 3px solid rgba(0,0,0,0.2);border-top: 2px solid rgba(0,0,0,0.2);border-left: 2px solid rgba(0,0,0,0.2);border-right: 2px solid rgba(0,0,0,0.2);'></div>"
+                    =$"<div style='border-radius: 40x;padding: 35px;margin: 0px;background-color: #ffffff;border-bottom: 1px solid rgba(0,0,0,0.2);border-top: 1px solid rgba(0,0,0,0.2);border-left: 1px solid rgba(0,0,0,0.2);border-right: 1px solid rgba(0,0,0,0.2);'></div>"
                   OnSelect: =Select(Parent)
                   Width: =1257
             - TextCanvas7_3:
