--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -24,7 +24,7 @@ Prueba_Nayeli As screen:
     "Gallery4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
-        Height: =481
+        Height: =485
         Items: |+
             =Filter(
                 T_OKR_APP_GCI_003,
@@ -48,48 +48,45 @@ Prueba_Nayeli As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
-        TemplateSize: =62
-        Width: =1245
+        TemplateSize: =64
+        Width: =1244
         X: =59
         Y: =237
         ZIndex: =4
 
-        Separator1 As rectangle:
-            BorderColor: =App.Theme.Colors.Darker40
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =8
+        HtmlText1_2 As htmlViewer:
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            Font: =App.Theme.Font
+            Height: =63
+            HtmlText: |-
+                =$"<div style='border-radius: 10px;padding: 28px;margin: 0px;background-color: #ffffff;border-bottom: 1px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
             OnSelect: =Select(Parent)
-            Width: =Parent.TemplateWidth
-            Y: =Parent.TemplateHeight - Self.Height
-            ZIndex: =5
-
-        Rectangle1 As rectangle:
-            BorderColor: =App.Theme.Colors.Darker40
-            Fill: =App.Theme.Colors.Darker30
-            Height: =Parent.TemplateHeight - Separator1.Height
-            OnSelect: =Select(Parent)
-            Visible: =ThisItem.IsSelected
-            Width: =4
-            ZIndex: =6
+            PaddingBottom: =1
+            PaddingLeft: =1
+            PaddingRight: =1
+            PaddingTop: =1
+            Size: =13
+            Width: =1244
+            ZIndex: =1
 
         TextCanvas7 As Texto:
             DisplayMode: =DisplayMode.Edit
             Height: =32
             Text: =ThisItem.codigoKR
             Width: =90
-            X: =20
-            Y: =26
-            ZIndex: =7
+            X: =19
+            Y: =12
+            ZIndex: =4
 
         TextCanvas7_1 As Texto:
             DisplayMode: =DisplayMode.Edit
             Height: =56
             Text: =ThisItem.nombreKR
-            Width: =207
+            Width: =282
             Wrap: =false
-            X: =110
-            Y: =14
-            ZIndex: =8
+            X: =109
+            Y: =0
+            ZIndex: =5
 
         TextCanvas7_2 As Texto:
             DisplayMode: =DisplayMode.Edit
@@ -97,9 +94,9 @@ Prueba_Nayeli As screen:
             Text: |
                 =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
             Width: =141
-            X: =343
-            Y: =14
-            ZIndex: =9
+            X: =435
+            Y: =0
+            ZIndex: =6
 
         estadoKRtext_1 As Texto:
             Align: ='TextCanvas.Align'.Center
@@ -121,9 +118,9 @@ Prueba_Nayeli As screen:
             Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =140
-            X: =510
-            Y: =30
-            ZIndex: =10
+            X: =599
+            Y: =17
+            ZIndex: =7
 
         Gallery6_3 As gallery.galleryHorizontal:
             BorderColor: =App.Theme.Colors.Darker40
@@ -134,9 +131,9 @@ Prueba_Nayeli As screen:
             TemplatePadding: =0
             TemplateSize: =30
             Width: =115
-            X: =718
-            Y: =26
-            ZIndex: =11
+            X: =811
+            Y: =6
+            ZIndex: =8
 
             Container2_3 As groupContainer.manualLayoutContainer:
                 BorderColor: =RGBA(52, 152, 47, 1)
@@ -295,10 +292,11 @@ Prueba_Nayeli As screen:
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(180, 214, 250, 1)
-        Height: =33
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =43
         Value: ="Código"
-        Width: =96
+        Width: =98
         X: =59
         Y: =194
         ZIndex: =10
@@ -307,11 +305,12 @@ Prueba_Nayeli As screen:
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(180, 214, 250, 1)
-        Height: =33
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =43
         Value: ="Descripción Kr"
-        Width: =207
-        X: =168
+        Width: =295
+        X: =159
         Y: =194
         ZIndex: =11
 
@@ -319,11 +318,12 @@ Prueba_Nayeli As screen:
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(180, 214, 250, 1)
-        Height: =33
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =43
         Value: ="Líder"
-        Width: =157
-        X: =389
+        Width: =177
+        X: =456
         Y: =194
         ZIndex: =12
 
@@ -331,11 +331,12 @@ Prueba_Nayeli As screen:
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(180, 214, 250, 1)
-        Height: =33
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =43
         Value: ="Estado KR"
-        Width: =145
-        X: =566
+        Width: =178
+        X: =635
         Y: =194
         ZIndex: =13
 
@@ -343,11 +344,12 @@ Prueba_Nayeli As screen:
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
         DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(180, 214, 250, 1)
-        Height: =33
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =43
         Value: ="Responsable"
-        Width: =135
-        X: =731
+        Width: =144
+        X: =815
         Y: =194
         ZIndex: =14
 
