--- a/PowerApp/Src/Prueba_Nayeli_1.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli_1.fx.yaml
@@ -248,21 +248,12 @@ Prueba_Nayeli_1 As screen:
             Y: =Parent.TemplateHeight - Self.Height
             ZIndex: =5
 
-        Rectangle5 As rectangle:
-            BorderColor: =App.Theme.Colors.Darker40
-            Fill: =App.Theme.Colors.Darker30
-            Height: =Parent.TemplateHeight - Separator4.Height
-            OnSelect: =Select(Parent)
-            Visible: =ThisItem.IsSelected
-            Width: =4
-            ZIndex: =6
-
         HtmlText4 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
             Font: =App.Theme.Font
             Height: =88
             HtmlText: |-
-                =$"<div style='border-radius: 2px;padding: 35px;margin: 0px;background-color: #ffffff;border-bottom: 3px solid rgba(0,0,0,0.2);border-top: 2px solid rgba(0,0,0,0.2);border-left: 2px solid rgba(0,0,0,0.2);border-right: 2px solid rgba(0,0,0,0.2);'></div>"
+                =$"<div style='border-radius: 40x;padding: 35px;margin: 0px;background-color: #ffffff;border-bottom: 1px solid rgba(0,0,0,0.2);border-top: 1px solid rgba(0,0,0,0.2);border-left: 1px solid rgba(0,0,0,0.2);border-right: 1px solid rgba(0,0,0,0.2);'></div>"
             OnSelect: =Select(Parent)
             Size: =13
             Width: =1257
