--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -10,6 +10,20 @@
 Screens:
   Prueba_Nayeli:
     Children:
+      - HtmlText1_3:
+          Control: HtmlViewer@2.1.0
+          Properties:
+            Height: =72
+            HtmlText: |-
+              =$"<div style='border-radius: 10px;padding: 28px;margin: 0px;background-color: #ffffff;border-bottom: 3px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
+            OnSelect: =Select(Parent)
+            PaddingBottom: =1
+            PaddingLeft: =1
+            PaddingRight: =1
+            PaddingTop: =1
+            Width: =1244
+            X: =59
+            Y: =178
       - Rectangle1_7:
           Control: Rectangle@2.3.0
           Properties:
@@ -57,7 +71,7 @@ Screens:
             - HtmlText1_2:
                 Control: HtmlViewer@2.1.0
                 Properties:
-                  Height: =63
+                  Height: =64
                   HtmlText: |-
                     =$"<div style='border-radius: 10px;padding: 28px;margin: 0px;background-color: #ffffff;border-bottom: 1px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
                   OnSelect: =Select(Parent)
@@ -264,14 +278,17 @@ Screens:
           Control: TextInput@0.0.51
           Properties:
             Align: ='TextInputCanvas.Align'.Center
+            BorderColor: =RGBA(122, 138, 143, 1)
             BorderRadius: =5
+            BorderStyle: =BorderStyle.Solid
+            BorderThickness: =0
             Fill: =RGBA(0, 153, 204, 1)
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =43
             Value: ="Código"
             Width: =98
             X: =59
-            Y: =194
+            Y: =186
       - TextInputCanvas2_1:
           Control: TextInput@0.0.51
           Properties:
@@ -283,7 +300,7 @@ Screens:
             Value: ="Descripción Kr"
             Width: =295
             X: =159
-            Y: =194
+            Y: =186
       - TextInputCanvas2_2:
           Control: TextInput@0.0.51
           Properties:
@@ -295,7 +312,7 @@ Screens:
             Value: ="Líder"
             Width: =177
             X: =456
-            Y: =194
+            Y: =186
       - TextInputCanvas2_3:
           Control: TextInput@0.0.51
           Properties:
@@ -307,7 +324,7 @@ Screens:
             Value: ="Estado KR"
             Width: =178
             X: =635
-            Y: =194
+            Y: =186
       - TextInputCanvas2_4:
           Control: TextInput@0.0.51
           Properties:
@@ -319,4 +336,4 @@ Screens:
             Value: ="Responsable"
             Width: =144
             X: =815
-            Y: =194
+            Y: =186
