--- a/PowerApp/Src/App.fx.yaml
+++ b/PowerApp/Src/App.fx.yaml
@@ -5,6 +5,7 @@ App As appinfo:
         =Set(pouplista,false);
         Set(pouplista_2,false);
         Set(pouplista_3,false);
+        Set(pouplista_4,false);
         Set(displayModeVar,DisplayMode.View);
         Set(varEstadoKr,"sin aprobación");
         Set(lastID, form_Registrar.LastSubmit.nombreKR);
