--- a/PowerApp/Other/Src/App.pa.yaml
+++ b/PowerApp/Other/Src/App.pa.yaml
@@ -13,6 +13,7 @@ App:
       =Set(pouplista,false);
       Set(pouplista_2,false);
       Set(pouplista_3,false);
+      Set(pouplista_4,false);
       Set(displayModeVar,DisplayMode.View);
       Set(varEstadoKr,"sin aprobación");
       Set(lastID, form_Registrar.LastSubmit.nombreKR);
